# shuckle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
compiler/: main.cpp  scanner.c  scanner.cpp  scanner.h  scanner.hpp  token.h  token.hpp  types.h  types.hpp
examples/: simple.scl
source/: globals.cpp  globals.hpp  main.cpp
source/compiler/: diagnostic.hpp  source_file.cpp  source_file.hpp  token.hpp
source/core/: compare.hpp  console.hpp  dictionary.hpp  hash.hpp  list.hpp  memory.hpp  program.hpp  string.cpp  string.hpp  types.hpp
source/core/console/default/: console.cpp
source/core/memory/default/: memory.cpp
